# End-to-End-ML-Predicting-Gold-Prices

./: .gitignore  LICENSE  README.md  backup_data.py  dashboard.py  pipeline_validation.py  pyproject.toml  requirements.txt  train.py  xgboost_predictor.pkl
data/: data_training.csv  data_visualization.csv
models/: model_20250628_194113.pkl
notebooks/: eda-gold.ipynb
notebooks/.ipynb_checkpoints/: eda-gold-checkpoint.ipynb
src/: data_loader.py  data_preprocessing.py  data_schema.py  data_validation.py  model_construction.py  model_evaluation.py
